--- a/CSS/index.css
+++ b/CSS/index.css
@@ -1,11 +1,13 @@
 :root {
-    --color-background: #849D8F;
+    --color-background1: #849D8F;
+    --color-background2: #9D8B84;
+    --color-background3: #8996A6;
 }
 
 @font-face {
     font-family: "Roboto";
-    /* font-style: normal; */
-    /* font-weight: normal; */
+    font-style: normal;
+    font-weight: normal;
     src: local("Roboto"),
         url("/fonts/web/roboto.woff2") format("woff2"),
         url("/fonts/web/roboto.woff") format("woff");
@@ -20,7 +22,7 @@ body {
     font-weight: 700;
     font-style: normal;
     color: #ffffff;
-    background-color: var(--color-background);
+    background-color: var(--color-background1);
 }
 
 input {
@@ -47,7 +49,7 @@ button {
     border: none;
     background: linear-gradient(0deg, #E74A35 0%, #F26843 100%);
     box-shadow: 0px 2px 2px rgba(172, 16, 0, 0.64);
-
+    border: none;
 }
 
 button:hover,
@@ -93,7 +95,33 @@ a {
     font-size: 16px;
     line-height: 18px;
     text-decoration: underline;
-    /* text-decoration-color: #D1C1BB; */
+    display: flex;
+    align-items: center;
+    text-decoration-color: rgba(255, 255, 255, 0.2);
+}
+
+.site-navigation button {
+    font-weight: 700;
+    font-size: 16px;
+    line-height: 18px;
+    background: none;
+    box-shadow: none;
+    text-align: center;
+    text-decoration: underline;
+    text-decoration-color: rgba(255, 255, 255, 0.2);
+
+}
+
+.site-navigation button:hover,
+.site-navigation button:focus {
+    background: #F7F6F3;
+    color: #000000;
+}
+
+.site-navigation button:active {
+    color: #000000;
+    background: linear-gradient(0deg, #EDEDED, #EDEDED), rgba(248, 247, 244, 0.99);
+    box-shadow: inset 0px 2px 1px #696969;
 }
 
 .user-navigation {
@@ -109,22 +137,25 @@ a {
     color: inherit;
 }
 
-.site-navigation a:hover,
+.user-navigation button {
+    box-shadow: none;
+    background: #FFFFFF;
+    mix-blend-mode: normal;
+    border: none;
+    background-color: rgba(255, 255, 255, 0.2);
+}
+
+/* .site-navigation a:hover,
 .site-navigation a:focus,
 .user-navigation a:hover,
 .user-navigation a:focus {
     background-color: #628d63;
-}
+} */
 
 .working-time {
     font-size: 14px;
     line-height: 16px;
 }
-
-/* .working-time li:nth-child(1) {
-    font-size: 14px;
-    line-height: 16px;
-} */
 
 .working-time li:nth-child(2) {
     font-size: 22px;
@@ -141,8 +172,10 @@ a {
 }
 
 .special-offer button {
+    border-radius: 40px;
     font-size: 32px;
     line-height: 44px;
+    align-items: center;
     text-align: center;
     color: #ffffff;
 }
@@ -261,11 +294,15 @@ a {
     font-size: 14px;
     line-height: 20px;
 
-    /* background-color: rgb(151, 210, 191); */
     background-image: url("IMG/Map.png");
     background-size: contain;
     background-repeat: no-repeat;
     color: #000000;
+
+}
+
+.address {
+    /* background: rgba(255, 255, 255, 0.98); */
 }
 
 .map :nth-child(2) {
@@ -311,6 +348,7 @@ a {
     line-height: 16px;
     align-items: center;
     text-decoration: underline;
+    text-decoration-color: rgba(255, 255, 255, 0.2);
 }
 
 .menu-footer-first-column li:nth-child(1) {
@@ -325,5 +363,9 @@ a {
 }
 
 .modal {
-    visibility:hidden
+    visibility: hidden;
+}
+
+.modal-login a {
+    color: inherit;
 }
