--- a/CSS/style.css
+++ b/CSS/style.css
@@ -50,7 +50,6 @@ button {
   border: none;
   background: linear-gradient(0deg, #e74a35 0%, #f26843 100%);
   box-shadow: 0px 2px 2px rgba(172, 16, 0, 0.64);
-  border: none;
   border-radius: 40px;
 }
 
@@ -104,15 +103,20 @@ a {
 }
 
 .site-navigation {
-  display: block;
+  /* display: block; */
   font-size: 16px;
   line-height: 18px;
   text-decoration: underline;
   align-items: center;
   text-decoration-color: rgba(255, 255, 255, 0.2);
+  margin: 0;
+  padding: 0;
 }
 
 .site-navigation button {
+  margin: 9 15;
+  padding: 0;
+  
   font-weight: 700;
   font-size: 16px;
   line-height: 18px;
@@ -121,7 +125,6 @@ a {
   text-align: center;
   text-decoration: underline;
   text-decoration-color: rgba(255, 255, 255, 0.2);
-  border-radius: none;
 }
 
 .site-navigation button:hover,
@@ -130,17 +133,37 @@ a {
   color: #000000;
 }
 
-.site-navigation button:active {
+ .site-navigation button:active {
   color: #000000;
   background: linear-gradient(0deg, #ededed, #ededed), rgba(248, 247, 244, 0.99);
   box-shadow: inset 0px 2px 1px #696969;
 }
+
+.site-navigation li{
+    border-radius: 40px;
+}
+
+.site-navigation li:hover,
+.site-navigation li:focus {
+  background: #f7f6f3;
+  color: #000000;
+  border-radius: 40px;
+}
+
+.site-navigation li:active {
+  color: #000000;
+  background: linear-gradient(0deg, #ededed, #ededed), rgba(248, 247, 244, 0.99);
+  box-shadow: inset 0px 2px 1px #696969;
+} 
 
 .user-navigation {
   font-size: 14px;
   line-height: 16px;
   font-weight: 500;
   display: flex;
+
+  margin: 0;
+  padding: 0;
 }
 
 .site-navigation a,
