style.css - fixed menu buttons (not all)

--- a/CSS/style.css
+++ b/CSS/style.css
@@ -66,7 +66,7 @@ button {
   border: none;
   background: linear-gradient(0deg, #e74a35 0%, #f26843 100%);
   box-shadow: 0px 2px 2px rgba(172, 16, 0, 0.64);
-  border-radius: 40px;
+  border-radius: 50px;
 }
 
 button:hover,
@@ -145,12 +145,15 @@ a {
 }
 
 .site-navigation button:hover,
-.site-navigation button:focus {
+.site-navigation button:focus,
+.site-navigation a:hover,
+.site-navigation a:focus {
   background: #f7f6f3;
   color: #000000;
 }
 
-.site-navigation button:active {
+.site-navigation button:active,
+.site-navigation a:active {
   color: #000000;
   background: linear-gradient(0deg, #ededed, #ededed), rgba(248, 247, 244, 0.99);
   box-shadow: inset 0px 2px 1px #696969;
@@ -165,19 +168,6 @@ a {
   font-size: 16px;
   line-height: 18px;
   align-items: center;
-}
-
-.site-navigation a:hover,
-.site-navigation a:focus {
-  background: #f7f6f3;
-  color: #000000;
-  border-radius: 40px;
-}
-
-.site-navigation a:active {
-  color: #000000;
-  background: linear-gradient(0deg, #ededed, #ededed), rgba(248, 247, 244, 0.99);
-  box-shadow: inset 0px 2px 1px #696969;
 }
 
 .user-navigation {
@@ -200,8 +190,8 @@ a {
 }
 
 .user-navigation .search__button {
-  /* display: flex; */
-  padding: 9px 9px 9px 9px;
+  display: flex;
+  padding: 7px 8px 8px 8px;
   margin: 0;
   font-weight: 500;
   font-size: 14px;
@@ -213,30 +203,11 @@ a {
   background-color: rgba(255, 255, 255, 0.2);
 }
 
-.search__button path:focus,
-.search__button path:hover {
-  fill: #000000;
-}
-
-.user-navigation button:hover,
-.user-navigation button:focus,
-.user-navigation a:hover,
-.user-navigation a:focus {
-  background: #f7f6f3;
-  color: #000000;
-}
-
-.user-navigation button:active {
-  color: #000000;
-  background: linear-gradient(0deg, #ededed, #ededed), rgba(248, 247, 244, 0.99);
-  box-shadow: inset 0px 2px 1px #696969;
-}
-
 .login-link {
-  /* display: flex; */
-  padding: 9px 18px 10px 16px;
+  display: flex;
+  padding: 6px 16px 7px 16px;
   margin: 0;
-  border-radius: 40px;
+  border-radius: 50px;
   font-weight: 500;
   font-size: 14px;
   line-height: 16px;
@@ -249,8 +220,8 @@ a {
 }
 
 .user-navigation .basket__button {
-  /* display: flex; */
-  padding: 9px 18px 10px 16px;
+  display: flex;
+  padding: 6px 17px 6px 16px;
   margin: 0;
   font-weight: 500;
   font-size: 14px;
@@ -260,6 +231,30 @@ a {
   background: #ffffff;
   mix-blend-mode: normal;
   background-color: rgba(255, 255, 255, 0.2);
+}
+
+.user-navigation button:hover path,
+.user-navigation button:focus path,
+.user-navigation a:hover path,
+.user-navigation a:focus path,
+.user-navigation button:hover g,
+.user-navigation button:focus g {
+  fill: #000000;
+}
+
+.user-navigation button:hover,
+.user-navigation button:focus,
+.user-navigation a:hover,
+.user-navigation a:focus {
+  background: #f7f6f3;
+  color: #000000;
+}
+
+.user-navigation button:active,
+.user-navigation a:active {
+  color: #000000;
+  background: linear-gradient(0deg, #ededed, #ededed), rgba(248, 247, 244, 0.99);
+  box-shadow: inset 0px 2px 1px #696969;
 }
 
 .working-time {
